--- a/web-customer-tracker/src/main/webapp/resources/css/style.css
+++ b/web-customer-tracker/src/main/webapp/resources/css/style.css
@@ -36,12 +36,13 @@ tr:nth-child(odd) {background: #BBBBBB}
 .add-button {
     border: 1px solid #666; 
     border-radius: 5px; 
-    padding: 4px; 
+    padding: 15px; 
     font-size: 12px;
     font-weight: bold;
     width: 120px; 
     padding: 5px 10px; 
     
+    margin-top: 15px;
     margin-bottom: 15px;
     background: #cccccc;
 }
