--- a/web-customer-tracker/src/main/webapp/resources/css/style.css
+++ b/web-customer-tracker/src/main/webapp/resources/css/style.css
@@ -46,3 +46,8 @@ tr:nth-child(odd) {background: #BBBBBB}
     margin-bottom: 15px;
     background: #cccccc;
 }
+
+a:link, a:visited {
+    text-decoration: none;
+    color: blue;	
+}
