--- a/web-customer-tracker/src/main/webapp/resources/css/style.css
+++ b/web-customer-tracker/src/main/webapp/resources/css/style.css
@@ -47,13 +47,17 @@ tr:nth-child(odd) {background: #BBBBBB}
     background: #cccccc;
 }
 
+.drop-down {
+    padding: 15px; 
+    font-size: 14px;
+    font-family: 'Arial', sans-serif;
+    padding: 5px 10px; 
+    
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
 a:link, a:visited {
     text-decoration: none;
     color: blue;	
-}
-
-.error {
-	color: red;
-	padding: 5px;
-	font-size: 12px;
 }
