--- a/customer-tracker/src/main/resources/templates/employees/employee-homepage.html
+++ b/customer-tracker/src/main/resources/templates/employees/employee-homepage.html
@@ -17,11 +17,11 @@
 
 	<!-- Navigation Bar -->
 	<nav class="navbar fixed-top navbar-expand-sm" style="background-color: #8080c0;">
- 		<a class="navbar-brand nav-heading-brand ms-5" th:href="@{/employees}">CRM</a>
+ 		<a class="navbar-brand nav-heading-brand ms-5" th:href="@{/employee/page}">CRM</a>
         
      	<ul class="navbar-nav me-auto mb-auto">
 	    	<li class="nav-item active">
-	        	<a class="nav-link nav-heading" th:href="@{/employees}">Home</a>
+	        	<a class="nav-link nav-heading" th:href="@{/employee/page}">Home</a>
 	      	</li>
 	      
 	      	<li class="nav-item">
@@ -36,15 +36,17 @@
     	<!-- Logout Button -->
         <div class = "navbar-nav ms-auto me-4">
         	
-        	<!-- Display username of authenticated User -->
-        	<div sec:authentication="name" class = "me-4 mt-2 user"></div>
-        	
+        	<!-- Display First Name of authenticated User -->
+			<a th:text="${firstName}" th:href="@{/employee/profile}" class = "me-4 mt-2 user"></a>
+
 			<form th:action = "@{/logout}" method = "POST">
 				<input type = "submit" value = "Logout" class = "btn btn-outline-dark">
 			</form>
 			
         </div>
     </nav>
+
+<br><br>
 
 </body>
 
