--- a/customer-tracker/src/main/resources/templates/security/login.html
+++ b/customer-tracker/src/main/resources/templates/security/login.html
@@ -65,7 +65,7 @@
 			
 			<input type="password" name="password" placeholder="Password">
 			
-			<input type="submit" name="login" class="login login-submit" value="login">
+			<input type="submit" name="login" class="login login-submit" value="Login">
 			
 		</form>
 
