--- a/customer-tracker/src/main/resources/templates/employees/employee-profile.html
+++ b/customer-tracker/src/main/resources/templates/employees/employee-profile.html
@@ -49,7 +49,7 @@
 <br><br>
 <div class="card ms-5 mt-5 w-50">
 
-    <h5 class="card-header">User Profile</h5>
+    <h5 class="card-header"><span th:text="${firstName}"></span> Profile</h5>
 
     <ui class="list-group list-group-flush">
         <li class="list-group-item" >Employee ID: <span th:text="${employeeId}"></span></li>
