Added Appropriate Thymeleaf Fragment for each Thymeleaf Template

--- a/customer-tracker/src/main/resources/templates/security/registration-form.html
+++ b/customer-tracker/src/main/resources/templates/security/registration-form.html
@@ -18,24 +18,7 @@
 
 <body>
 
-	<!-- Navigation Bar -->
-	<nav class="navbar fixed-top navbar-expand-sm" style="background-color: #8080c0;">
- 		<a class="navbar-brand nav-heading-brand ms-5" th:href="@{/}">CRM</a>
-        
-     	<ul class="navbar-nav me-auto mb-auto">
-	    	<li class="nav-item active">
-	        	<a class="nav-link nav-heading" th:href="@{/}">Home</a>
-	      	</li>
-    	</ul>
-    	
-    	<!-- Login Button -->
-        <div class = "navbar-nav ms-auto me-4">
-        	<a th:href = "@{/login/showLoginPage}"
-				class = "btn btn-outline-dark">
-				Login
-			</a>
-        </div>
-    </nav>
+	<nav th:insert="fragments/nav-login.html :: nav"></nav>
     
     <br><br><br><br>
 
