--- a/customer-tracker/src/main/resources/templates/customers/customer-form.html
+++ b/customer-tracker/src/main/resources/templates/customers/customer-form.html
@@ -2,95 +2,66 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 <head>
-	<title>Customer Form</title>
+    <title>Customer Form</title>
 
-	<!-- Bootstrap CSS -->
-	<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
-			rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+            rel="stylesheet">
 
-	<!-- Local CSS File -->
-	<link rel="stylesheet" th:href="@{/css/nav.css}" />
+    <!-- Local CSS File -->
+    <link rel="stylesheet" th:href="@{/css/nav.css}"/>
 </head>
 
 <body>
 
-<!-- Navigation Bar -->
-<nav class="navbar fixed-top navbar-expand-sm" style="background-color: #8080c0;">
-	<a class="navbar-brand nav-heading-brand ms-5" th:href="@{/employee/page}">CRM</a>
-
-	<ul class="navbar-nav me-auto mb-auto">
-		<li class="nav-item active">
-			<a class="nav-link nav-heading" th:href="@{/employee/page}">Home</a>
-		</li>
-
-		<li class="nav-item">
-			<a class="nav-link nav-heading" th:href="@{/customers/list}">Customers</a>
-		</li>
-
-		<li class="nav-item" sec:authorize = "hasAnyRole('ADMIN', 'MANAGER')">
-			<a class="nav-link nav-heading" th:href="@{/licenses/list}">Licenses</a>
-		</li>
-	</ul>
-
-	<!-- Logout Button -->
-	<div class = "navbar-nav ms-auto me-4">
-
-		<!-- Display username of authentication User -->
-		<a th:text="${firstName}" th:href="@{/employee/profile}" class = "me-4 mt-2 user"></a>
-
-		<form th:action = "@{/logout}" method = "POST">
-			<input type = "submit" value = "Logout" class = "btn btn-outline-dark">
-		</form>
-
-	</div>
-</nav>
+<nav th:insert="fragments/nav-logout.html :: nav"></nav>
 
 <br>
 
-<div class = "container">
+<div class="container">
 
-	<h3 class = "nav-padding">Customer Form</h3>
+    <h3 class="nav-padding">Customer Form</h3>
 
-	<div class = "col-4">
+    <div class="col-4">
 
-		<hr>
+        <hr>
 
-		<p>Save Customer</p>
+        <p>Save Customer</p>
 
-		<!-- Send Form Data to Post Request Mapping '/customers/saveCustomer' -->
-		<form action = "#" th:action ="@{/customers/saveCustomer}"
-			  th:object = "${customer}" method = "POST">
+        <!-- Send Form Data to Post Request Mapping '/customers/saveCustomer' -->
+        <form action="#" th:action="@{/customers/saveCustomer}"
+              th:object="${customer}" method="POST">
 
-			<!-- Add hidden form field to handle Update (knows which Customer by ID to Update) -->
-			<input type = "hidden" th:field = "*{id}">
+            <!-- Add hidden form field to handle Update (knows which Customer by ID to Update) -->
+            <input type="hidden" th:field="*{id}">
 
-			<!-- When form is loaded, calls appropriate Getter methods -->
-			<!-- When form is submitted, calls appropriate Setter methods -->
-			<input type = "text" th:field = "*{firstName}"
-				   class = "form-control mb-4 col-4" placeholder = "First Name">
+            <!-- When form is loaded, calls appropriate Getter methods -->
+            <!-- When form is submitted, calls appropriate Setter methods -->
+            <input type="text" th:field="*{firstName}"
+                   class="form-control mb-4 col-4" placeholder="First Name">
 
-			<!-- Display Field Errors for Customer -->
-			<p th:if = "${#fields.errors('firstName')}" th:errors = "*{firstName}" class = "error"></p>
+            <!-- Display Field Errors for Customer -->
+            <p th:if="${#fields.errors('firstName')}" th:errors="*{firstName}" class="error"></p>
 
-			<input type = "text" th:field = "*{lastName}"
-				   class = "form-control mb-4 col-4" placeholder = "Last Name">
-			<p th:if = "${#fields.errors('lastName')}" th:errors = "*{lastName}" class = "error"></p>
+            <input type="text" th:field="*{lastName}"
+                   class="form-control mb-4 col-4" placeholder="Last Name">
+            <p th:if="${#fields.errors('lastName')}" th:errors="*{lastName}" class="error"></p>
 
-			<input type = "text" th:field = "*{email}"
-				   class = "form-control mb-4 col-4" placeholder = "Email">
-			<p th:if = "${#fields.errors('email')}" th:errors = "*{email}" class = "error"></p>
+            <input type="text" th:field="*{email}"
+                   class="form-control mb-4 col-4" placeholder="Email">
+            <p th:if="${#fields.errors('email')}" th:errors="*{email}" class="error"></p>
 
-			<!-- Submit Button -->
-			<button type = "submit" class = "btn btn-info col-2">Save</button>
-		</form>
+            <!-- Submit Button -->
+            <button type="submit" class="btn btn-info col-2">Save</button>
+        </form>
 
-		<br>
+        <br>
 
-		<!-- Link to go back to mapping 'customers/list' -->
-		<a th:href = "@{/customers/list}">Back to Customers List</a>
+        <!-- Link to go back to mapping 'customers/list' -->
+        <a th:href="@{/customers/list}">Back to Customers List</a>
 
-	</div>
+    </div>
 
 </div>
 
