--- a/customer-tracker/src/main/resources/templates/customers/customer-licenses.html
+++ b/customer-tracker/src/main/resources/templates/customers/customer-licenses.html
@@ -2,87 +2,58 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 <head>
-	<title>Customer Licenses</title>
+    <title>Customer Licenses</title>
 
-	<!-- Bootstrap CSS -->
-	<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
-			rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+            rel="stylesheet">
 
-	<!-- Local CSS File -->
-	<link rel="stylesheet" th:href="@{/css/nav.css}" />
+    <!-- Local CSS File -->
+    <link rel="stylesheet" th:href="@{/css/nav.css}"/>
 </head>
 
 <body>
 
-<!-- Navigation Bar -->
-<nav class="navbar fixed-top navbar-expand-sm" style="background-color: #8080c0;">
-	<a class="navbar-brand nav-heading-brand ms-5" th:href="@{/employee/page}">CRM</a>
-
-	<ul class="navbar-nav me-auto mb-auto">
-		<li class="nav-item active">
-			<a class="nav-link nav-heading" th:href="@{/employee/page}">Home</a>
-		</li>
-
-		<li class="nav-item">
-			<a class="nav-link nav-heading" th:href="@{/customers/list}">Customers</a>
-		</li>
-
-		<li class="nav-item" sec:authorize = "hasAnyRole('ADMIN', 'MANAGER')">
-			<a class="nav-link nav-heading" th:href="@{/licenses/list}">Licenses</a>
-		</li>
-	</ul>
-
-	<!-- Logout Button -->
-	<div class = "navbar-nav ms-auto me-4">
-
-		<!-- Display username of authentication User -->
-		<a th:text="${firstName}" th:href="@{/employee/profile}" class = "me-4 mt-2 user"></a>
-
-		<form th:action = "@{/logout}" method = "POST">
-			<input type = "submit" value = "Logout" class = "btn btn-outline-dark">
-		</form>
-
-	</div>
-</nav>
+<nav th:insert="fragments/nav-logout.html :: nav"></nav>
 
 <br><br>
 
-<div class = "container col-9">
+<div class="container col-9">
 
-	<h2 class = "nav-padding">Customer Licenses</h2>
+    <h2 class="nav-padding">Customer Licenses</h2>
 
-	<hr>
+    <hr>
 
-	<!-- Table to Display Customer along with their Licenses Info -->
-	<table class = "table table-bordered table-striped table-hover">
-		<thead class = "thead-dark">
-		<tr>
-			<th>First Name</th>
-			<th>Last Name</th>
-			<th>License</th>
-			<th>Start Date</th>
-			<th>Expiration Date</th>
-		</tr>
-		</thead>
+    <!-- Table to Display Customer along with their Licenses Info -->
+    <table class="table table-bordered table-striped table-hover">
+        <thead class="thead-dark">
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>License</th>
+            <th>Start Date</th>
+            <th>Expiration Date</th>
+        </tr>
+        </thead>
 
-		<tbody>
-		<tr th:each="license : ${licenses}">
-			<td th:text="${customer.firstName}" />
-			<td th:text="${customer.lastName}" />
-			<td th:text="${license.licenseName}" />
-			<td th:text="${license.startDate}" />
-			<td th:text="${license.expirationDate}" />
-		</tr>
-		</tbody>
+        <tbody>
+        <tr th:each="license : ${licenses}">
+            <td th:text="${customer.firstName}"/>
+            <td th:text="${customer.lastName}"/>
+            <td th:text="${license.licenseName}"/>
+            <td th:text="${license.startDate}"/>
+            <td th:text="${license.expirationDate}"/>
+        </tr>
+        </tbody>
 
-	</table>
+    </table>
 
-	<!-- Link back to mapping 'customers/list' -->
-	<a href = "#" th:href = "@{/customers/list}"
-	   class = "btn btn-primary btn-sm mb-3">
-		Back to Customer List
-	</a>
+    <!-- Link back to mapping 'customers/list' -->
+    <a href="#" th:href="@{/customers/list}"
+       class="btn btn-primary btn-sm mb-3">
+        Back to Customer List
+    </a>
 
 </div>
 
