--- a/customer-tracker/src/main/resources/templates/employees/employee-homepage.html
+++ b/customer-tracker/src/main/resources/templates/employees/employee-homepage.html
@@ -15,36 +15,7 @@
 
 <body>
 
-<!-- Navigation Bar -->
-<nav class="navbar fixed-top navbar-expand-sm" style="background-color: #8080c0;">
-    <a class="navbar-brand nav-heading-brand ms-5" th:href="@{/employee/page}">CRM</a>
-
-    <ul class="navbar-nav me-auto mb-auto">
-        <li class="nav-item active">
-            <a class="nav-link nav-heading" th:href="@{/employee/page}">Home</a>
-        </li>
-
-        <li class="nav-item">
-            <a class="nav-link nav-heading" th:href="@{/customers/list}">Customers</a>
-        </li>
-
-        <li class="nav-item" sec:authorize="hasAnyRole('ADMIN','MANAGER')">
-            <a class="nav-link nav-heading" th:href="@{/licenses/list}">Licenses</a>
-        </li>
-    </ul>
-
-    <!-- Logout Button -->
-    <div class="navbar-nav ms-auto me-4">
-
-        <!-- Display First Name of authenticated User -->
-        <a th:text="${firstName}" th:href="@{/employee/profile}" class="me-4 mt-2 user"></a>
-
-        <form th:action="@{/logout}" method="POST">
-            <input type="submit" value="Logout" class="btn btn-outline-dark">
-        </form>
-
-    </div>
-</nav>
+<nav th:insert="fragments/nav-logout.html :: nav"></nav>
 
 <br><br>
 
