--- a/customer-tracker/src/main/resources/templates/employees/employee-profile.html
+++ b/customer-tracker/src/main/resources/templates/employees/employee-profile.html
@@ -15,36 +15,7 @@
 
 <body>
 
-<!-- Navigation Bar -->
-<nav class="navbar fixed-top navbar-expand-sm" style="background-color: #8080c0;">
-    <a class="navbar-brand nav-heading-brand ms-5" th:href="@{/employee/page}">CRM</a>
-
-    <ul class="navbar-nav me-auto mb-auto">
-        <li class="nav-item active">
-            <a class="nav-link nav-heading" th:href="@{/employee/page}">Home</a>
-        </li>
-
-        <li class="nav-item">
-            <a class="nav-link nav-heading" th:href="@{/customers/list}">Customers</a>
-        </li>
-
-        <li class="nav-item" sec:authorize="hasAnyRole('ADMIN','MANAGER')">
-            <a class="nav-link nav-heading" th:href="@{/licenses/list}">Licenses</a>
-        </li>
-    </ul>
-
-    <!-- Logout Button -->
-    <div class="navbar-nav ms-auto me-4">
-
-        <!-- Display username of authenticated User -->
-        <a th:text="${firstName}" th:href="@{/employee/profile}" class = "me-4 mt-2 user"></a>
-
-        <form th:action="@{/logout}" method="POST">
-            <input type="submit" value="Logout" class="btn btn-outline-dark">
-        </form>
-
-    </div>
-</nav>
+<nav th:insert="fragments/nav-logout.html :: nav"></nav>
 
 <br><br>
 <div class="card ms-5 mt-5 w-50">
@@ -52,12 +23,12 @@
     <h5 class="card-header"><span th:text="${firstName}"></span> Profile</h5>
 
     <ui class="list-group list-group-flush">
-        <li class="list-group-item" >Employee ID: <span th:text="${employeeId}"></span></li>
-        <li class="list-group-item" >Username: <span th:text="${username}"></span></li>
-        <li class="list-group-item" >Password: <span th:text="${maskedPassword}"></span></li>
-        <li class="list-group-item" >First Name: <span th:text="${firstName}"></span></li>
-        <li class="list-group-item" >Last Name: <span th:text="${lastName}"></span></li>
-        <li class="list-group-item" >Email: <span th:text="${email}"></span></li>
+        <li class="list-group-item">Employee ID: <span th:text="${employeeId}"></span></li>
+        <li class="list-group-item">Username: <span th:text="${username}"></span></li>
+        <li class="list-group-item">Password: <span th:text="${maskedPassword}"></span></li>
+        <li class="list-group-item">First Name: <span th:text="${firstName}"></span></li>
+        <li class="list-group-item">Last Name: <span th:text="${lastName}"></span></li>
+        <li class="list-group-item">Email: <span th:text="${email}"></span></li>
     </ui>
 
 </div>
