--- a/customer-tracker/src/main/resources/templates/home.html
+++ b/customer-tracker/src/main/resources/templates/home.html
@@ -15,28 +15,8 @@
 
 <body>
 
-	<!-- Navigation Bar -->
-	<nav class="navbar navbar-expand-sm" style="background-color: #8080c0;">
- 		<a class="navbar-brand nav-heading-brand ms-5" th:href="@{/}">CRM</a>
-        
-     	<ul class="navbar-nav mr-auto mb-auto">
-	      <li class="nav-item active">
-	        <a class="nav-link nav-heading" th:href="@{/}">Home</a>
-	      </li>
-	      <li class="nav-item">
-	      	<a class = "nav-link nav-heading" th:href="@{/}">About</a>
-	      </li>
-    	</ul>
-        
-        <!-- Login Button -->
-        <div class = "navbar-nav ms-auto me-4">
-        	<a th:href = "@{/login/showLoginPage}"
-				class = "btn btn-outline-dark">
-				Login
-			</a>
-        </div>
-    </nav>
-    
+	<nav th:insert="fragments/nav-login.html :: nav"></nav>
+
 </body>
 
 </html>
