Updated display link to view list of licenses to be authenticated user's with admin or manager role and remove unnecessary import of thymeleaf security to certain thymeleaf templates

--- a/customer-tracker/crm-web/src/main/resources/templates/customers/list-customers.html
+++ b/customer-tracker/crm-web/src/main/resources/templates/customers/list-customers.html
@@ -128,8 +128,8 @@
     </a>
 
     <!-- Link to view all Licenses -->
-    <a href="#" th:href="@{/licenses/list}"
-       class="btn btn-info btn-sm mb-3">
+    <a href="#" th:href="@{/licenses/list}" class="btn btn-info btn-sm mb-3"
+       sec:authorize="hasAnyRole('ADMIN','MANAGER')">
         Licenses
     </a>
 
