--- a/customer-tracker/crm-web/src/main/resources/templates/employees/imageUploadForm.html
+++ b/customer-tracker/crm-web/src/main/resources/templates/employees/imageUploadForm.html
@@ -29,7 +29,7 @@
                 <div class="card-body">
                     <div class="row">
                         <form action="http:\\localhost" method="POST" enctype="multipart/form-data"
-                              th:action="@{/employee/image}">
+                              th:action="@{/employees/image}">
                             <label class="control-label col-md-5">Select File</label>
                             <input id="imageFile" name="imageFile" type="file" class="file col-md-8">
                             <button type="submit" class="btn btn-primary col-md-2">Submit</button>
