Added the previous functionality to move back one page from current page, for pagination of list of customers and licenses

--- a/customer-tracker/crm-web/src/main/resources/templates/customers/list-customers.html
+++ b/customer-tracker/crm-web/src/main/resources/templates/customers/list-customers.html
@@ -70,6 +70,14 @@
                            '&sortDirection=' + ${sortDirection}}">Next</a>
 						<span th:unless="${currentPage < totalPages}">Next</span> &nbsp; &nbsp;
 
+                        <!-- If current page number is not equal to the first page,
+                            then display a link to go to the previous page from current page-->
+                        <!-- Else display the text 'Prev' -->
+                            <a th:if="${currentPage != 1}"
+                               th:href="@{'/customers/page/' + ${currentPage - 1}+ '?sortField=' + ${sortField} +
+                                '&sortDirection=' + ${sortDirection}}">Previous</a>
+						    <span th:unless="${currentPage != 1}">Previous</span> &nbsp; &nbsp;
+
                         <!-- If current page number is less than total number of pages,
                             then display a link to go to the last page -->
                         <!-- Else display the text 'Last' -->
